--- a/README.Rmd
+++ b/README.Rmd
@@ -70,69 +70,6 @@ echo "perl Mpileup_RNA.pl Patient4SomaticSNPs.txt spot000/spot000.bam ./refdata-
 
 * [spaPointMutation](https://github.com/limin321/stmut/blob/master/FigTableScripts/FigTables.md#figure-1-figure-2a) creates a folder in your working directory including 8 files related to spot point mutations exploration. The AllSptTumPropsed.csv file contains a list of point mutations for visualization on the 10X Loupe Browser. The color scheme can be customized in the 10X Loupe Browser. The figures generated should be similar to Figure 1 in our manuscript. Make sure the format of your input files  matches the examples provided by the package to ensure the smooth running of the codes. <br />
 
-#### Examples of running individual functions
-The following are basic examples on how to run each individual function:
-1. sptBClstRds()
-```{r example}
-library(stmut)
-## basic example code
-files <- list.files(path = "./inst/extdata/spotIndex", pattern = ".txt", full.names = TRUE, recursive = FALSE)
-data1 <- read.csv("./inst/extdata/filtered_feature_bc.csv", header = TRUE)
-data2 <- read.csv("./inst/extdata/Graph-Based.csv", header = TRUE)
-path <- "./inst/extdata/tissue_positions_list.csv"
-
-df <- sptBClstRds(files=files,data1=data1, data2=data2, path=path)
-
-head(df[[1]]) # sptBcRds.csv
-head(df[[2]]) # sptBcSummary.csv
-```
-
-2. sptMutCt()
-```{r example2}
-index <- read.csv("./inst/extdata/spotBC.csv", header = TRUE)
-files2 <- list.files(path = "./inst/extdata/mpileup",pattern = "MpileupOutput_RNA.txt", full.names = TRUE, recursive = TRUE, include.dirs = TRUE)
-df1 <- sptMutCt(index = index, files = files2)
-
-head(df1[[1]]) # spotRdCtFinal.csv
-head(df1[[2]]) # spotMutReadCount.csv
-```
-
-3. nonZeRdCts()
-```{r example3}
-d1 <- read.csv("./inst/extdata/spotBClster.csv", header = TRUE)
-d2 <- read.csv("./inst/extdata/spotRdCtFinal.csv", header = TRUE)
-d2 <- na.omit(d2)
-
-df3 <- nonZeRdCts(df1 = d1, df2 = d2)
-head(df3[[1]]) # NonZeroRdSpotIndex.csv
-head(df3[[2]]) # MutantSpotIndex.csv
-```
-
-4. spotSummary()
-```{r example4}
-df <- read.csv("./inst/extdata/NonZeroRdSpotIndex.csv", header = TRUE)
-path1 <-"./inst/extdata/mpileup/"
-
-df4 <- spotSummary(df = df, path1 = path1)
-
-head(df4) # NonZeroRdSpotIndex_Scored.csv
-```
-Column meaning of df4: <br />
-column 1: Spatial barcode <br />
-column 2: Spot name <br />
-column 3: Cluster in Loupe.Loupe file <br />
-column 4: Total reads each spot has <br />
-column 5: Row position in position_lists_bc.csv <br />
-column 6: Column position in position_lists_bc.csv <br />
-column 7: Reference read counts <br />
-column 8: Mutant read counts <br />
-column 9: Sum of Ref read counts and Mut read counts (sum of col 7 and col 8) <br />
-column 10: The number ( < 10) in this column indicates how many mutant reads in a spot. For example, G9 means there are 9 mutant reads in that spot. However, G10 means there are10 or more mutant reads in the spot. <br />
-column 11: Proportion of # of mutant reads to Total reads (col8/col4) <br />
-column 12: Proportion of # of mutant reads to sum of ref and mut reads (col8/col9) <br />
-column 13: A binary column, when the spot has > 1 mutant read, it is 1, otherwise, it is 0. <br />
-column 14: A score calculated based on the # of ref and mutant read counts. The higher the score is, the more likely it is a tumor spot. The table is sorted by this column. <br />
-column 15: Details on which genes contain what mutations in which spots. <br />
 
 ## II. Copy Number Variation Detection
 ***
@@ -142,6 +79,15 @@ To call copy number variation from 10X spatial or single cell data. We strongly 
 We published 2 docker images, one for ubuntu(amd64), the other for MacOS (arm64). Once you pull the image,
 you need to prepare 4 input files in your working dir. The 4 inputs are filtered_feature_bc.csv, Graph-Based.csv, tissue_positions_list.csv, annotate.csv. Next, you can run the docker image following the example below. <br />
 We provide two grouping methods, either by genes (default method, with min 1k genes) or by reads (min 5k UMI)
+
+### 10X Platform
+```docker run --rm  -v ./stmutCNVtest/scripts/:/home/stmut/ stmutcnv:latest bash /usr/local/bin/stmutcnv.sh cnv --filteredFeatureCSV ./stereo/filtered_feature_bc.csv --clusterCSV ./stereo/graph_based.csv --positionCSV ./stereo/tissue_positions_list.csv --group gene --annotate ./stereo/annotate.csv --TotalReads 1000 --numSpots 8```
+
+### StereoSeq Platform
+First, run the following code to generate mimic input files similar to 10X platform.
+```docker run --rm  -v ./stmutCNVtest/scripts/:/home/stmut/ stmutcnv:latest bash /usr/local/bin/stmutcnv.sh gemconvert --gemfile ./stereo/C03139F1.tissue.gem.gz --binsize 200 --outpath ./stereo/```
+
+Second, repeat the same code as in 10X Platform after tumor, non-tumor clusters annotation.
 
 Example 1: group spots by number of genes when bulk tumor CNVs is available.
 
@@ -196,58 +142,6 @@ docker run -v <your_local_dir>:/home/stmut limin321/stmutcnv_arm64:0.0.1 bash /u
     --group gene 
     --annotate ./annotate.csv
 `
-
-
-### Examples of R functions
-accStartCNR_CNS() and bulkCNVs() functions are used to generate arm-level bulk CNVs plot. <br />
-wtArmMedianOne(), CtArmGenes() and cdt_filt_sort() functions are used in generating spot CNVs heatmap. Kindly refer to the case study in our manuscript FigTableScripts [here](https://github.com/limin321/stmut/blob/master/FigTableScripts/FigTables.md#spatial-spot-cnvs-figure-3) <br />
-
-Here are examples on how to run the following functions: <br />
-1. wtArmMedianOne()
-```{r}
-df <- read.csv("./inst/extdata/spot1_rep1.cnr", header = TRUE)
-path1 <- read.csv("./inst/extdata/hg38_centromereSimple.bed", sep = "\t", header = FALSE) 
-
-df5 <- wtArmMedianOne(data = cnr, centmere = centm)
-
-head(df5[[1]])
-head(df5[[2]])
-```
-2. CtArmGenes()
-```{r}
-cdt <- read.table("./inst/extdata/cdt.cdt", header = TRUE)
-d3 <- read.table("./inst/extdata/summary.txt", sep = "\t", header = TRUE) 
-
-df6 <- CtArmGenes(cdt = cdt, data = d3)
-
-head(df6)
-```
-
-3. cdt_filt_sort()
-```{r}
-library(dplyr)
-cdt <- read.table("./inst/extdata/cdt.cdt", header = TRUE)
-data4 <- read.csv("./inst/extdata/CtArmGenSummary.csv",  header = TRUE)
-arm <- c("1p","3p","3q","4q","5q","8q","9q","10p","10q","11q","13p","13q", "20p","20q","21q","14q","17q")
-d4 <- data4 %>% filter(arms %in% arm)
-genes <- d4[,"genes"]
-rs <- d4[,"gene_row"]
-gainLoss <- c(1,-1,1,-1,-1,1,1,-1,-1,1,-1,-1,1,1,-1,1,1)
-
-df7 <- cdt_filt_sort(cdt = cdt,genes = genes,gainLoss = gainLoss,rs=rs)
-
-head(df7)
-```
-
-4. cnvs()
-```{r, eval=FALSE}
-# data1: annotation data. A 2 column dataframe with column names as "spotName" and "annotate". Also, the annotate column must have "normal" cells or spots which will be used to center the data.
-# cdt file is the weighted median cdt file generated by cnvkit.py.
-# data2 is the output of wtArmMedianOne() function stored in the wtcnr/summary.txt
-
-cnvs(data1 = data1, cdt = cdt0, data2 = data2, arm = arm, gainLoss = gainLoss) # the output is CNVs.cdt in your working directory.
-```
-
 
 
 ## III. Allelic Imbalance 
