--- a/README.Rmd
+++ b/README.Rmd
@@ -73,36 +73,199 @@ echo "perl Mpileup_RNA.pl Patient4SomaticSNPs.txt spot000/spot000.bam ./refdata-
 
 ## II. Copy Number Variation Detection
 ***
-### Docker Image download
-To call copy number variation from 10X spatial or single cell data. We strongly recommend to pull our docker image from Docker Hub [here](https://hub.docker.com/search?q=limin321) <br />
+To call copy number variation from 10X spatial or single cell data. We published 
+2 docker images, one built under ubuntu 20.04 (amd64), the other in MacOS A
+pple M1 chip (arm64). 
 
-We published 2 docker images, one for ubuntu(amd64), the other for MacOS (arm64). Once you pull the image,
-you need to prepare 4 input files in your working dir. The 4 inputs are 
-1) filtered_feature_bc.csv, 
-2) Graph-Based.csv, 
-3) tissue_positions_list.csv, 
-4) annotate.csv. this file should look like below <br /> 
-![](./FigTableScripts/Images/annotate.png)
-
-The above file 1) to 3) are spaceranger output. File 2) is exported from the Loupe browser as shown above. File 4) is a two column csv file as shown above.
-
-After finishing preparing the 4 input files. Time to call CNVs using docker image following the examples below. <br />
-
-The docker image is adapted to call CNVs from 2 spatial platfroms, 10X and StereoSeq. 
-
-### 10X Platform
-If your data is from 10X, you can directly follow the below code.
 ```
-docker run --rm  -v ./stmutCNVtest/scripts/:/home/stmut/ stmutcnv:latest bash /usr/local/bin/stmutcnv.sh cnv \
-    --filteredFeatureCSV ./stereo/filtered_feature_bc.csv \
-    --clusterCSV ./stereo/graph_based.csv \
-    --positionCSV ./stereo/tissue_positions_list.csv \
-    --group gene \
-    --annotate ./stereo/annotate.csv \
+Usage: /usr/local/bin/stmutcnv.sh cnv \
+    --filteredFeatureCSV <value> \
+    --clusterCSV <value> \
+    --positionCSV <value> \
+    --TotalReads <value> \
+    --numSpots <value> \
+    --group <value> \
+    --annotate <value> \
+    --arms <value> \
+    --gainLoss <value> -\
+    --pmtimes <value> \
+    --clean <value>
+
+```
+
+### Details of each argument
+| Argument [default]  | Description                                          |
+|---------------------|-------------------------------------------------|
+| `filteredFeatureCSV`| "filtered_feature_bc.csv" file                 |
+| `clusterCSV`        | "Graph-Based.csv" file |
+| `positionCSV`       | "tissue_positions_list.csv" file    |
+| `numSpots`  [8]     | [opt]Number of spots used for grouping |
+| `TotalReads`[1000]  | [opt]Number of reads or genes of a new spot after grouping|
+| `group`  [gene]     | [opt] One of 'gene','read', 'none'    |
+| `annotate`          | A two-column normal, tumor annotated csv file         |
+| `arms`              | [opt] A list of arms; ex: 3p. 3q, 6p, 6q |
+| `gainLoss`          | [opt] A list of 1, -1; ex: 1,-1,1,1     |
+| `pmtimes` [100]     | [opt] Permutation time when bulk DNA provided|
+| `clean`   [true]    | [opt] clean intermediate files|
+
+opt = optional
+
+##### Pick your case type and refer to the example code to prepare yours. <br />
+
+|case| group by| bulk tumor DNA-CNV data | Example |
+|----|---------|----|---------------------------------------------|
+|1| `gene`| YES| (1) |
+|2| `gene`     | NO | (2)|
+|3| `read`     | YES |(1)|
+|4| `read`     |NO|(2)|
+|5| `none`     | YES |(3)|
+|6| `none`     | NO   |(4)|
+
+## Ready to run your data.
+### Step 1, download Docker or Singularity image.
+Please pull the docker image from Docker Hub [here](https://hub.docker.com/search?q=limin321) <br />
+Ubutun:<br />
+`docker pull limin321/stmutcnv_amd64:0.0.1` <br />
+`singularity pull stmut.sig docker://limin321/stmutcnv_amd64:0.0.1` <br />
+
+Mac: <br />
+`docker pull limin321/stmutcnv_arm64:0.0.1`<br />
+`singularity pull stmut.sig docker://limin321/stmutcnv_arm64:0.0.1` <br />
+
+
+### Step 2, prepare the following 4 input files, better in the same working dir:
+&nbsp;&nbsp;&nbsp;&nbsp;1) filtered_feature_bc.csv, <br /> 
+&nbsp;&nbsp;&nbsp;&nbsp;2) Graph-Based.csv, <br /> 
+&nbsp;&nbsp;&nbsp;&nbsp;3) tissue_positions_list.csv, <br /> 
+&nbsp;&nbsp;&nbsp;&nbsp;4) annotate.csv. It should look like below <br /> 
+
+| cluster | annotate | 
+|---------|----------|
+| Cluster1| tumor| 
+|Cluster2| normal| 
+|Cluster3| tumor | 
+|Cluster4| normal|
+|...| ...|
+
+The first 1) and third 3) inputs are standard Spaceranger outputs. The second 2) is exported from the Loupe browser as shown above. The fourth 4) input is a two column csv file annotated by you for each cluster. Please note the annoation "normal" and "tumor" should be little case.
+
+### step 3: Infer CNV from 10X Spatial Data -- 10X Platform
+**Example 1**, group by 'gene' or 'read' ***with bulk tumor DNA data CNV available***. Assuming the four inputs file are in the 'inputs' folder inside 'your_local_dir' 
+```
+docker run --rm -v <your_local_dir>:/home/stmut stmutcnv_arm64:0.0.1 bash /usr/local/bin/stmutcnv.sh cnv \
+    --filteredFeatureCSV ./inputs/filtered_feature_bc.csv \
+    --clusterCSV ./inputs/Graph-Based.csv \
+    --positionCSV ./inputs/tissue_positions_list.csv \
     --TotalReads 1000 \
-    --numSpots 8
+    --numSpots 8 \
+    --group gene \ # change to 'read' if you want to group by read counts.
+    --annotate ./inputs/annotate.csv \
+    --arms 3p,6q,9q \
+    --gainLoss -1,-1,-1 \
+    --pmtimes 20
 ```
-We provide two grouping methods, either by genes (default method, with min 1k genes per new spot) or by reads (min 5k UMI per new spot)
+Expect output:
+```
+analysis
+└── grouped_spots
+    ├── BarcodeLegend.csv
+    ├── cdt
+    │   ├── CNVs_OrganizedByGEcluster_UMIcount.cdt
+    │   ├── CNVs_OrganizedByGEcluster_UMIcount.pdf
+    │   ├── CNVs_RankedBySimilarityToDNA.cdt
+    │   ├── CNVs_RankedBySimilarityToDNA_CNVscoreHistogram.csv
+    │   ├── CNVs_RankedBySimilarityToDNA_CNVscoreHistogram.pdf
+    │   ├── CNVs_RankedBySimilarityToDNA_QQplot.pdf
+    │   ├── CNVs_RankedbySimilaritytoDNA_Quintiles4Loupe.csv
+    │   ├── CNVs_clustered.Rdata
+    │   ├── CNVs_clustered_heatmap.pdf
+    │   └── permutCNV_summ.csv
+    └── histogram_genes_per_spot.png
+
+3 directories, 12 files
+```
+
+We provide three sets of outputs: <br />
+**CNVs_OrganizedByGEcluster_UMIcount**: the three files are used to generate Fig.4 included in our paper. <br />
+**CNVs_RankedBySimilarityToDNA**: this set is optional. Only when you provide bulk tumor CNVs data, these outputs will be generated. <br />
+**CNVs_clustered**: we provide a dendrogram of CNVs info. The details are saved in the .Rdata which you can extract by running the following **R** codes. <br />
+
+```
+load("./analysis_readgp/grouped_spots/cdt/CNVs_clustered.Rdata") # this will load the htp obj in R
+df1 <- read.table("./analysis/grouped_spots/cdt/CNVs_RankedBySimilarityToDNA.cdt", header = TRUE)
+data <- htp$carpet
+data1 <- cbind(df1[,1:2], data)
+write.table(data1, file = "./analysis/grouped_spots/cdt/CNVs_cluster.cdt", sep = "\t", row.names = FALSE)
+```
+
+**Example 2**, group by 'gene' or 'read' ***without bulk tumor DNA data***. Assuming the four inputs file are in the 'inputs' folder inside 'your_local_dir'
+```
+docker run --rm -v <your_local_dir>:/home/stmut stmutcnv_arm64:0.0.1 bash /usr/local/bin/stmutcnv.sh cnv \
+    --filteredFeatureCSV ./inputs/filtered_feature_bc.csv \
+    --clusterCSV ./inputs/Graph-Based.csv \
+    --positionCSV ./inputs/tissue_positions_list.csv \
+    --TotalReads 1000 \
+    --numSpots 8 \
+    --group read \ # change to 'gene' if you want to group by gene counts.
+    --annotate ./inputs/annotate.csv \
+```
+Expected outputs:
+```
+analysis_grp_read_NObulk
+└── grouped_spots
+    ├── BarcodeLegend.csv
+    ├── cdt
+    │   ├── CNVs_OrganizedByGEcluster_UMIcount.cdt
+    │   ├── CNVs_OrganizedByGEcluster_UMIcount.pdf
+    │   ├── CNVs_clustered.Rdata
+    │   └── CNVs_clustered_heatmap.pdf
+    └── histogram_genes_per_spot.png
+
+3 directories, 6 files
+
+```
+
+**Example 3**: no grouping spots is performed. Bulk tumor CNV data is provided. Useful for single-cell data.
+```
+docker run --rm -v <your_local_dir>:/home/stmut stmutcnv_arm64:0.0.1 bash /usr/local/bin/stmutcnv.sh cnv \
+    --filteredFeatureCSV ./inputs/filtered_feature_bc.csv \
+    --clusterCSV ./inputs/Graph-Based.csv \
+    --positionCSV ./inputs/tissue_positions_list.csv \
+    --TotalReads 1000 \
+    --numSpots 8 \
+    --group none \
+    --annotate ./inputs/annotate.csv \
+    --arms 3p,6q,9q \
+    --gainLoss -1,-1,-1 \
+```
+*Expect outputs are the same as Example 1.*
+
+
+**Example 4**: no grouping spots is performed. No Bulk tumor CNV data is provided.
+```
+docker run --rm -v <your_local_dir>:/home/stmut stmutcnv_arm64:0.0.1 bash /usr/local/bin/stmutcnv.sh cnv \
+    --filteredFeatureCSV ./inputs/filtered_feature_bc.csv \
+    --clusterCSV ./inputs/Graph-Based.csv \
+    --positionCSV ./inputs/tissue_positions_list.csv \
+    --TotalReads 1000 \
+    --numSpots 8 \
+    --group none \
+    --annotate ./inputs/annotate.csv \
+
+```
+*Expected outputs are the same as Example 2.*
+
+***One example of running in singularity:***
+```
+singularity exec --bind <your_dir_to_mount>:/home/stmut --pwd /home/stmut <path/to>/stmut.sig bash stmutcnv.sh cnv \
+    --filteredFeatureCSV ./inputs/filtered_feature_bc.csv \
+    --clusterCSV ./inputs/Graph-Based.csv \
+    --positionCSV ./inputs/tissue_positions_list.csv \
+    --TotalReads 1000 --numSpots 8 \
+    --group gene \
+    --annotate ./inputs/annotate.csv
+```
+
 
 ### StereoSeq Platform
 If your data is from StereoSeq, you need to do some extra work. Here is the step by step instructions.
@@ -117,74 +280,15 @@ docker run --rm  -v ./stmutCNVtest/scripts/:/home/stmut/ stmutcnv:latest bash /u
 It takes 3 arguments: the tissue.gem.gz; the bin_size, the output dir you want to store the output.
 
 Output 4 files. <br />
-    1) filtered_feature_bc.csv <br />
-    2) graph_based.csv <br />
-    3) tissue_positions_list.csv <br />
-    4) bin200_seurat.RDS <br />
+&nbsp;&nbsp;&nbsp;&nbsp;1) filtered_feature_bc.csv <br />
+&nbsp;&nbsp;&nbsp;&nbsp;2) graph_based.csv <br />
+&nbsp;&nbsp;&nbsp;&nbsp;3) tissue_positions_list.csv <br />
+&nbsp;&nbsp;&nbsp;&nbsp;4) bin200_seurat.RDS <br />
 The counterfeit barcodes in each file were created to mimic the ones from 10X platform 
 to keep consistent data format for analysis. The real corresponding coordinates are stored 
 in the meta data of the rds. With this rds, you also need to perform clustering analysis, and annotate each cluster so as to create a annotate.csv file to run CNV analysis in the next step.
 
-###### Second, repeat the same code as shown in the 10X Platform.
-
-
-#### More cases of calling CNVs.
-Case 1: group spots by number of genes when bulk tumor CNVs is available.
-
-```
-docker run -v <your_local_dir>:/home/stmut limin321/stmutcnv_arm64:0.0.1 bash /usr/local/bin/stmutcnv.sh cnv
-    --filteredFeatureCSV ./filtered_feature_bc.csv 
-    --clusterCSV ./Graph-Based.csv \
-    --positionCSV ./tissue_positions_list.csv \
-    --TotalReads 1000 \
-    --numSpots 8 \
-    --group gene \  
-    --annotate ./annotate.csv \ 
-    --arms 1p,3p,3q,4q,5q,8q,9q,10p,10q,11q,13p,13q,20p,20q,21q,14q,17q \
-    --gainLoss 1,-1,1,-1,-1,1,1,-1,-1,1,-1,-1,1,1,-1,1,1
-```
-
-Expected output format: <br />
-.<br />
-└── spatial <br />
-    ├── grouped_spots <br />
-    │   ├── BarcodeLegend.csv # details on which spots are grouped into a new spot <br />
-    │   ├── cdt <br />
-    │   │   ├── CNVs_OrganizedByGEcluster_UMIcount.cdt <br />
-    │   │   ├── CNVs_OrganizedByGEcluster_UMIcount_ChromosomeTemplate.png <br />
-    │   │   ├── CNVs_OrganizedByGEcluster_UMIcount_ClusterTemplate.png <br />
-    │   │   ├── CNVs_RankedBySimilarityToDNA.cdt <br />
-    │   │   ├── CNVs_RankedBySimilarityToDNA_CNVscoreHistogram.csv <br />
-    │   │   ├── CNVs_RankedBySimilarityToDNA_CNVscoreHistogram.pdf <br />
-    │   │   ├── CNVs_RankedBySimilarityToDNA_QQplot.pdf <br />
-    │   │   ├── CNVs_RankedbySimilaritytoDNA_Quintiles4Loupe.csv <br />
-    │   │   ├── CNVs_clustered.Rdata <br />
-    │   │   └── CNVs_clustered_heatmap.pdf <br />
-    │   ├── filtered_feature_bc.csv <br />
-    │   └── grouped_spotSummary.csv <br />
-    └── spotSummary.csv
-
-4 directories, 14 files
-
-We provide three sets of outputs: <br />
-CNVs_OrganizedByGEcluster_UMIcount: the three files are used to generate Fig.4 included in our paper. <br />
-CNVs_RankedBySimilarityToDNA: this set is optional. Only when you provide bulk tumor CNVs data, these outputs will be generated. <br />
-CNVs_clustered: we provide a dendrogram of CNVs info. The details are saved in the .Rdata which you can extract for further exploring. <br />
-
-
-Case 2: group spots by number of reads without bulk tumor CNVs available <br />
-
-```
-docker run -v <your_local_dir>:/home/stmut limin321/stmutcnv_arm64:0.0.1 bash /usr/local/bin/stmutcnv.sh cnv
-    --filteredFeatureCSV ./filtered_feature_bc.csv 
-    --clusterCSV ./Graph-Based.csv 
-    --positionCSV ./tissue_positions_list.csv 
-    --TotalReads 1000 
-    --numSpots 8 
-    --group gene 
-    --annotate ./annotate.csv
-```
-
+###### Second, infer CNV by following the same codes shown in the 10X Platform.
 
 
 ## III. Allelic Imbalance 
